[package]
name = "rust_thread_pool"
version = "0.1.0"
authors = ["James W. Fawcett <jfawcett@twcny.rr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
[dependencies]
rust_blocking_queue = { path = "../RustBlockingQueue" }